# metaproxy

./: .dockerignore  .windsurfrules  BLUEPRINT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
docker/: Dockerfile
docs/: connect_proxy_investigation.md
src/: api.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  proxy.rs
tests/: api_tests.rs  proxy_connect_tests.rs  proxy_tests.rs
