[package]
name = "metaproxy"
version = "0.1.0"
edition = "2021"
description = "High-performance HTTP/HTTPS proxy server using Actix-Web"

[dependencies]
actix-web = "4.4.0"
actix-http = "3.4.0"
bytes = "1.5.0"
futures = "0.3.30"
pin-project = "1.1.3"
reqwest = { version = "0.11.22", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
base64 = "0.21.7"
env_logger = "0.11"
