[package]
name = "metaproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
httparse = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
url = "2.5.4"
clap = { version = "4.5.31", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
